--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-test-renderer": "^16.9.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts buiнфкld",
     "eject": "react-scripts eject",
     "test": "react-scripts test",
     "test:watch": "jest --watch",
@@ -41,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.10.0",
-    "jest": "^24.9.0"
-  }
+    "enzyme": "^3.10.0"
+    }
 }
