--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-jest": "^24.9.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "jest": "^24.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-is": "^16.9.0",
     "react-redux": "^7.1.0",
@@ -20,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts buiнфкld",
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "react-scripts test",
     "test:watch": "jest --watch",
@@ -43,5 +48,5 @@
   },
   "devDependencies": {
     "enzyme": "^3.10.0"
-    }
+  }
 }
