--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
-    "jest": "^24.9.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
