--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://aizadazh.github.io/contact-book",
   "name": "contact-book",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,7 @@
     "classnames": "^2.2.6",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
+    "gh-pages": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
@@ -31,7 +33,10 @@
     "test": "react-scripts test",
     "flow": "flow",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,5 +58,4 @@
     "redux-mock-store": "^1.5.3",
     "redux-promise-middleware": "^6.1.1"
   }
- 
 }
